Bug 20147. Make sure to correctly scope 'parent' when creating script objects. XUL document's parent is the window; XUL element's parent is the document. r=brendan